fixed mat-tab overflow issue

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -13,7 +13,6 @@
     padding-bottom:1.5em;
     padding-right: 1.5em;
 
-
       span {
         color: #F4DD53;
         }
@@ -69,13 +68,8 @@
     right: 0; 
     left: 0;
     bottom: 0;
-
   }
 
-  mat-tab {
-    height: auto;
-    width: auto;
-  }
 
   mat-sidenav {
     padding: 1em;
