--- a/src/app/google-id-chips/google-id-chips.component.scss
+++ b/src/app/google-id-chips/google-id-chips.component.scss
@@ -3,6 +3,6 @@
   }
 
 .submit-button {
-  // position: absolute;
+  position: absolute;
   right: 0
 }
