--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.mat-tab-body-wrapper {
+    height: 100%;
+  }
+
+.mat-tab-group {
+height: 100%;
+}
